Add profile pic

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
+					<img src="./assets/css/images/profilePic.jpg" alt="">
 					<h1>DAVID HONG</h1>
 					<p>Software Engineer based in NEW YORK, NY</p>
 
@@ -144,7 +145,7 @@
 						</div>
 						<div class="col-12">
 							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
+								<li><input type="submit" value="Send Email" /></li>
 							</ul>
 						</div>
 					</div>
