Fix size of picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<img src="./assets/css/images/profilePic.jpg" alt="">
+					<img class='profile-pic' src="./assets/css/images/profilePic.jpg" alt="">
 					<h1>DAVID HONG</h1>
 					<p>Software Engineer based in NEW YORK, NY</p>
 
