Add shopper section in features

--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
+				<a class='exstrava' href="https://shopper-live.herokuapp.com/" target='_blank' class="image fit"><img
+						src="./assets/css/images/shopper.png" alt="" /></a>
+				<div>
+					<header class='exstrava-container'>
+						<h2>Shopper</h2>
+					</header>
+					<p>An e-commerce site that allows users to shop.</p>
+					<p class='feature-1'>React/Redux</p>
+			
+					<a href="https://exstravagant.herokuapp.com/#/"> <i class="devicon-chrome-plain"></i> </a>
+					<a href="https://github.com/dhong89/exSTRAVAgant" target='_blank'> <i class="devicon-github-plain colored"></i>
+					</a>
+				</div>
+			</article>
+
+			<article id="first" class="container box style1 right">
 				<a class='exstrava' href="https://exstravagant.herokuapp.com/#/"  target='_blank' class="image fit" ><img src="./assets/css/images/exstrava.png" alt="" /></a>
 				<div>
 					<header class='exstrava-container'>
