Add shopper hyperlink

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 					<p>An e-commerce site that allows users to shop.</p>
 					<p class='feature-1'>React/Redux</p>
 			
-					<a href="https://exstravagant.herokuapp.com/#/"> <i class="devicon-chrome-plain"></i> </a>
-					<a href="https://github.com/dhong89/exSTRAVAgant" target='_blank'> <i class="devicon-github-plain colored"></i>
+					<a href="https://shopper-live.herokuapp.com/"> <i class="devicon-chrome-plain"></i> </a>
+					<a href="https://github.com/dhong89/shopper" target='_blank'> <i class="devicon-github-plain colored"></i>
 					</a>
 				</div>
 			</article>
